--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,7 @@
     <noscript>
       <strong>We're sorry but client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnY5RLlSRZr1k4uHejhMfKRWBIpbdrz5U&libraries=places"></script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
